--- a/src/app/componentes/gerar-chamado/gerar-chamado.component.css
+++ b/src/app/componentes/gerar-chamado/gerar-chamado.component.css
@@ -138,3 +138,34 @@ app-menu-superior{
     height: 10vh !important;
 }
 
+
+
+.erro{
+    color: red;
+  }
+  
+  .erro_input{
+    border: 1px solid red !important;
+  }
+  
+  .erro_input {
+    animation: treme 0.1s;
+    animation-iteration-count: 3;
+  }
+  
+  @keyframes treme {
+    0% {margin-left: 0;}
+    25% {margin-left: 2px;}
+    50% {margin-left: 0;}
+    75% {margin-left: -2px;}
+    100% {margin-left: 0;}
+  }
+  
+  input.ng-dirty.ng-invalid {
+    border: 1px solid red !important;
+  }
+  
+  
+  nz-input-group.ng-dirty.ng-invalid {
+    border: 1px solid red !important;
+  }
