Alterado area administrativa

--- a/src/app/componentes/area-administrativa/area-administrativa.component.html
+++ b/src/app/componentes/area-administrativa/area-administrativa.component.html
@@ -5,7 +5,7 @@
     <div class="conteudo">
 
         <div class="bloco_superior">
-            <h1>Área</h1>
+            <button>Logs do sistema</button>
         </div>
 
         <div class="blocos_inferiores">
