--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-
+  <form>
   <img src="../../../assets/imagens/fundo_login.svg" alt="" class="fundo">
 
   <div class="bloco_login">
-
+    
     <h1>Help Desk</h1>
 
     <div class="username">
@@ -20,11 +20,8 @@
       <button type="submit" (click)="login()"> <img src="../../../assets/imagens/icone_entrar.svg" alt=""> ENTRAR</button>
     </div>
     
-
-    <div class="intranet">
-      <p> <img src="../../../assets/imagens/icone_exclamacao.svg" alt=""> Entre com seu login da intranet</p>
-    </div>
+  
 
   </div>
-
+</form>
 </div>
