--- a/src/app/componentes/chamados/chamados.component.html
+++ b/src/app/componentes/chamados/chamados.component.html
@@ -7,7 +7,7 @@
     <div class="chamados_abertos" >
       <p>Chamados Abertos : <span>{{chamado?.chamado?.length}}</span></p>
      
-
+      <p>Gerar relatorio</p>
     </div>
 
     <div class="bloco_conteudo">
