--- a/src/app/componentes/dashboards/dashboards.component.html
+++ b/src/app/componentes/dashboards/dashboards.component.html
@@ -7,7 +7,7 @@
 
       <div class="blocos">
         <div class="superior">
-          <h1>127</h1> 
+          <h1>{{andamento}}</h1> 
           <img src="../../../../../assets/imagens/bandeira.png" alt="">
         </div>
 
@@ -17,17 +17,17 @@
 
       <div class="blocos">
         <div class="superior">
-          <h1>127</h1> 
+          <h1>{{finalizados}}</h1> 
           <img src="../../../../../assets/imagens/concluido.png" alt="">
         </div>
 
 
-        <p>Chamados fechados</p>
+        <p>Chamados Finalizados</p>
       </div>
 
       <div class="blocos">
         <div class="superior">
-          <h1>127</h1> 
+          <h1>{{cancelados}}</h1> 
           <img src="../../../../../assets/imagens/cancelado.png" alt="">
         </div>
 
@@ -35,15 +35,6 @@
         <p>Chamados cancelados</p>
       </div>
 
-      <div class="blocos">
-        <div class="superior">
-          <h1>127</h1> 
-          <img src="../../../../../assets/imagens/anexo.png" alt="">
-        </div>
-
-
-        <p>Anexos</p>
-      </div>
 
     </div>
 
