--- a/src/app/componentes/gerar-chamado/gerar-chamado.component.html
+++ b/src/app/componentes/gerar-chamado/gerar-chamado.component.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="arquivo">
-          <input type="file">
+          <input type="file" formControlName="arquivo">
         </div>
 
         <div class="enviar">
