Adicionado função para trocar foto user

--- a/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.html
+++ b/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.html
@@ -97,7 +97,8 @@
 
                 <div class="bloco_direita_esquerda">
                   <h1>Foto de perfil</h1>
-                  <img src="../../../../assets/imagens/perfil-usuarios.png" alt="">
+                  <img [src]="chamado.arquivo" />
+                  <!-- <img src="../../../../assets/imagens/perfil-usuarios.png" alt=""> -->
                 </div>
 
                 <div class="bloco_direita_direita">
