--- a/src/app/componentes/gerar-chamado/gerar-chamado.component.html
+++ b/src/app/componentes/gerar-chamado/gerar-chamado.component.html
@@ -43,7 +43,28 @@
         </div>
 
         <div class="arquivo">
-          <input type="file" formControlName="arquivo">
+          <div class="clearfix">
+            <nz-upload
+              nzListType="picture-card"
+              [nzPreview]="handlePreview"
+              [nzBeforeUpload]="beforeUpload"
+            >
+              <div>
+                <!-- <span nz-icon nzType="plus"></span> -->
+                <div style="margin-top: 8px">Upload</div>
+              </div>
+            </nz-upload>
+            <nz-modal
+              [nzVisible]="previewVisible"
+              [nzContent]="modalContent"
+              [nzFooter]="null"
+              (nzOnCancel)="previewVisible = false"
+            >
+              <ng-template #modalContent>
+                <img [src]="previewImage" [ngStyle]="{ width: '100%' }" />
+              </ng-template>
+            </nz-modal>
+          </div>
         </div>
 
         <div class="enviar">
