--- a/src/app/componentes/informacoes/informacoes.component.css
+++ b/src/app/componentes/informacoes/informacoes.component.css
@@ -61,6 +61,7 @@ label {
     width: 50%;
     background-color: white;
     margin-right: 5%;
+    margin-bottom: 30px;
 }
 
 .bloco_direita{
@@ -154,4 +155,14 @@ label {
 .nome img{
     width: 50px;
     height: 50px;
+}
+
+
+.enviar{
+    margin-bottom: 30px;
+}
+
+
+nz-upload{
+    display: flex !important;
 }
