--- a/src/app/componentes/informacoes/informacoes.component.html
+++ b/src/app/componentes/informacoes/informacoes.component.html
@@ -12,7 +12,8 @@
 
                     <div class="lado_esquerdo">
                         <h1>Foto de perfil</h1>
-                        <img src="../../../../../assets/imagens/perfil-usuarios.png" alt="">
+                        <img [src]="usuario.img_perfil" />
+                        <!-- <img src="../../../../../assets/imagens/perfil-usuarios.png" alt=""> -->
                     </div>
 
                     <div class="lado_direito_conteudo">
@@ -49,6 +50,35 @@
                         <div class="chamados" *ngIf="nomeUsuario != null">
                             <label for="">Chamados Gerados: </label>
                             <p>45</p>
+                        </div>
+
+                        <div class="img">
+
+                            <div class="clearfix">
+                                <nz-upload
+                                nzListType="picture-card"
+                                [nzPreview]="handlePreview"
+                                [nzBeforeUpload]="beforeUpload"
+                                >
+                                <div>
+                                    <!-- <span nz-icon nzType="plus"></span> -->
+                                    <div style="margin-top: 8px">Upload</div>
+                                </div>
+                                </nz-upload>
+                                <nz-modal
+                                [nzVisible]="previewVisible"
+                                [nzContent]="modalContent"
+                                [nzFooter]="null"
+                                (nzOnCancel)="previewVisible = false"
+                                >
+                                <ng-template #modalContent>
+                                    <img [src]="previewImage" [ngStyle]="{ width: '100%' }" />
+                                </ng-template>
+                                </nz-modal>
+                            </div>
+
+                            <button (click)="enviaDados()" class="enviar" [disabled]="bloquear == true">Enviar</button>
+
                         </div>
                     </div>
                 </div>
