--- a/src/app/componentes/menus/menu-superior/menu-superior.component.html
+++ b/src/app/componentes/menus/menu-superior/menu-superior.component.html
@@ -12,7 +12,8 @@
         <img src="../../../../../assets/imagens/notificacao.png" alt="">
 
         <div class="nome">
-          <img src="../../../../../assets/imagens/perfil-usuarios.png" alt="">
+          <!-- <img src="../../../../../assets/imagens/perfil-usuarios.png" alt=""> -->
+          <img [src]="usuario.img_perfil" />
           <p *ngIf="nomeUsuario">{{nomeUsuario}}</p>
           <p *ngIf="nomeTecnico">{{nomeTecnico}}</p> 
         </div>
