Adicionado upload de imagens

--- a/src/app/componentes/area-administrativa/area-administrativa.component.html
+++ b/src/app/componentes/area-administrativa/area-administrativa.component.html
@@ -6,7 +6,7 @@
 
         <div class="bloco_superior">
               <div class="infos">
-                    <h1>Chamados por tecnicos:</h1>
+                    <h1>Chamados por técnicos:</h1>
                     <div class="conteudo_infos">
 
                         <div class="bloco_infos" *ngFor="let item of todosChamados?.tecnicos">
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="direita">
-                        <button (click)="openDialogTecnico()">Tecnicos</button>
+                        <button (click)="openDialogTecnico()">Técnicos</button>
                     </div>
                 </div>
 
