--- a/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.html
+++ b/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.html
@@ -90,14 +90,14 @@
 
             <div class="bloco_direita"> 
               <div class="topo_bloco_direita">
-                <h1>Tecnico: </h1>
+                <h1>Técnico: </h1>
               </div>
 
               <div class="blocos_direita">
 
                 <div class="bloco_direita_esquerda">
                   <h1>Foto de perfil</h1>
-                  <img [src]="chamado.arquivo" />
+                  <nz-avatar nzIcon="user" [nzSrc]="tecnicoChamado.img_perfil" class="user"></nz-avatar>
                   <!-- <img src="../../../../assets/imagens/perfil-usuarios.png" alt=""> -->
                 </div>
 
