--- a/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.css
+++ b/src/app/componentes/chamados/chamado-individual-user/chamado-individual-user.component.css
@@ -242,7 +242,7 @@ label {
     margin-top: 30px;
 }
 
-.bloco_direita_esquerda img{
+.bloco_direita_esquerda nz-avatar{
     height: 140px;
     width: 140px;
 }
