--- a/src/app/componentes/informacoes/informacoes.component.css
+++ b/src/app/componentes/informacoes/informacoes.component.css
@@ -61,7 +61,6 @@ label {
     width: 50%;
     background-color: white;
     margin-right: 5%;
-    margin-bottom: 30px;
 }
 
 .bloco_direita{
@@ -70,9 +69,19 @@ label {
     background-color: white;
 }
 
-.lado_esquerdo img{
+nz-avatar{
     width: 200px;
     height: 200px;
+}
+
+.img button{
+    background: #162D44;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    color: white;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .nome_lado_direito, .nascimento, .email, .setor, .ramal, .setor, .chamados, .especialidade{
@@ -162,7 +171,16 @@ label {
     margin-bottom: 30px;
 }
 
+.enviar p{
+    margin-bottom: 0px !important;
+}
+
 
 nz-upload{
     display: flex !important;
+}
+
+.img{
+    display: flex;
+    align-items: center;
 }
