--- a/src/app/componentes/menus/menu-superior/menu-superior.component.css
+++ b/src/app/componentes/menus/menu-superior/menu-superior.component.css
@@ -50,9 +50,10 @@ label {
     align-items: center;
 }
 
-.nome img{
+.user{
     width: 50px;
     height: 50px;
+    margin-right: 15px;
 }
 
 .nome p {
