--- a/src/app/componentes/informacoes/informacoes.component.html
+++ b/src/app/componentes/informacoes/informacoes.component.html
@@ -13,7 +13,7 @@
                     <div class="lado_esquerdo">
                         <h1>Foto de perfil</h1>
                         <!-- <img [src]="usuario.img_perfil" /> -->
-                        <nz-avatar nzIcon="user" [nzSrc]="usuario.img_perfil" class="user"></nz-avatar>
+                        <nz-avatar nzIcon="user" [nzSrc]="usuario?.img_perfil" class="user"></nz-avatar>
 
                         <!-- <img src="../../../../../assets/imagens/perfil-usuarios.png" alt=""> -->
                     </div>
