--- a/src/app/componentes/gerar-chamado/gerar-chamado.component.html
+++ b/src/app/componentes/gerar-chamado/gerar-chamado.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="local">
-          <label>*Local : </label>
+          <label>*Setor : </label>
           <input type="text" formControlName="local" name="local" required [ngClass]="{'erro_input': erro == true && chamadosForm.value.local == ''}">
         </div>
 
