Ajustes layout admin

--- a/src/app/componentes/area-administrativa/area-administrativa.component.html
+++ b/src/app/componentes/area-administrativa/area-administrativa.component.html
@@ -48,9 +48,20 @@
             </div>
             
             <div class="bloco_direita">
-                <button (click)="openDialogLogs()">Visualizar Logs</button>
 
-                <button (click)="openDialogResumo()">Visualizar relatórios</button>
+                <p>Gerar</p>
+                <div class="logs">
+                    <div class="esquerda">
+                        <button (click)="openDialogLogs()">Logs</button>
+                        <img src="../../../assets/imagens/logs.png" alt="">
+
+                    </div>
+
+                    <div class="direita">
+                        <button (click)="openDialogResumo()">Relatórios</button>
+                        <img src="../../../assets/imagens/relatorio.png" alt="">
+                    </div>
+
 
             </div>
         </div>
