--- a/src/app/componentes/chamados/relatorio/relatorio.component.html
+++ b/src/app/componentes/chamados/relatorio/relatorio.component.html
@@ -1,4 +1,4 @@
-<p>{{data.length}}</p>
+<p *ngIf="mostrar == true">{{data.length}}</p>
 <div class="grafico">
   <canvas id="myChart" #mychart></canvas>
 </div>
