--- a/src/app/componentes/area-administrativa/area-administrativa.component.css
+++ b/src/app/componentes/area-administrativa/area-administrativa.component.css
@@ -37,11 +37,6 @@
     box-shadow: 0px 1px 22px -12px #607d8b;
 }
 
-.bloco_direita{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .bloco_direita button{
     background: #162D44;
@@ -114,6 +109,24 @@ input:-webkit-autofill:focus {
     height: 60%;
 }
 
+
+.logs button{
+    background: #162D44;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.logs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60%;
+}
+
 .direita, .esquerda{
     height: 100%;
     width: 100%;
@@ -133,6 +146,11 @@ input:-webkit-autofill:focus {
 
 
 .bloco_esquerda p{
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.bloco_direita p{
     font-size: 30px;
     margin-top: 20px;
 }
