--- a/src/app/componentes/chamados/chamados.component.html
+++ b/src/app/componentes/chamados/chamados.component.html
@@ -33,6 +33,7 @@
           </tr>
           
         </table>
+        <img src="../../../../assets/imagens/fundo_busca.png" alt="" *ngIf="chamado?.length == 0">
 
       </div>
 
