--- a/src/app/componentes/chamados/relatorio/relatorio.component.css
+++ b/src/app/componentes/chamados/relatorio/relatorio.component.css
@@ -1,6 +1,5 @@
 p{
     position: absolute;
-    top: 384px;
-    margin-left: 137px;
+    top: 49%;    margin-left: 137px;
     font-size: 43px;
 }
