--- a/src/app/componentes/area-administrativa/resumo/resumo.component.html
+++ b/src/app/componentes/area-administrativa/resumo/resumo.component.html
@@ -47,7 +47,7 @@
 </div>
 
 <p>Total de chamados: <b>{{valores_filtro?.chamado?.length}}</b></p>
-<p (click)="teste()">Média de tempo de finalização de chamado: <b>{{dias}}</b> Dias e <b>{{hora}} minutos</b></p>
+<p >Média de tempo de finalização de chamado: <b>{{dias}}</b> Dias e <b>{{hora}} minutos</b></p>
 
 <div class="tabela">
 
